crates/pg_syntax/tests/snapshots/postgres_regress/join@507.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "create table join_ut1 (a int, b int, c varchar);"
---
CreateStmt@0..48
  Create@0..6 "create"
  Whitespace@6..7 " "
  Table@7..12 "table"
  Whitespace@12..13 " "
  RangeVar@13..21
    Ident@13..21 "join_ut1"
  Whitespace@21..22 " "
  Ascii40@22..23 "("
  ColumnDef@23..28
    Ident@23..24 "a"
    Whitespace@24..25 " "
    TypeName@25..28
      IntP@25..28 "int"
  Ascii44@28..29 ","
  Whitespace@29..30 " "
  ColumnDef@30..35
    Ident@30..31 "b"
    Whitespace@31..32 " "
    TypeName@32..35
      IntP@32..35 "int"
  Ascii44@35..36 ","
  Whitespace@36..37 " "
  ColumnDef@37..46
    Ident@37..38 "c"
    Whitespace@38..39 " "
    TypeName@39..46
      Varchar@39..46 "varchar"
  Ascii41@46..47 ")"
  Ascii59@47..48 ";"

