crates/pg_syntax/tests/snapshots/postgres_regress/join@508.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "insert into join_ut1 values (101, 101, 'y'), (2, 2, 'z');"
---
InsertStmt@0..57
  Insert@0..6 "insert"
  Whitespace@6..7 " "
  Into@7..11 "into"
  Whitespace@11..12 " "
  RangeVar@12..20
    Ident@12..20 "join_ut1"
  Whitespace@20..21 " "
  SelectStmt@21..55
    Values@21..27 "values"
    Whitespace@27..28 " "
    Ascii40@28..29 "("
    List@29..42
      AConst@29..32
        Iconst@29..32 "101"
      Ascii44@32..33 ","
      Whitespace@33..34 " "
      AConst@34..37
        Iconst@34..37 "101"
      Ascii44@37..38 ","
      Whitespace@38..39 " "
      AConst@39..42
        Sconst@39..42 "'y'"
    Ascii41@42..43 ")"
    Ascii44@43..44 ","
    Whitespace@44..45 " "
    Ascii40@45..46 "("
    List@46..55
      AConst@46..47
        Iconst@46..47 "2"
      Ascii44@47..48 ","
      Whitespace@48..49 " "
      AConst@49..50
        Iconst@49..50 "2"
      Ascii44@50..51 ","
      Whitespace@51..52 " "
      AConst@52..55
        Sconst@52..55 "'z'"
  Ascii41@55..56 ")"
  Ascii59@56..57 ";"

