crates/pg_syntax/tests/snapshots/postgres_regress/join@516.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "create unique index on fkest(x, x10, x100);"
---
IndexStmt@0..43
  Create@0..6 "create"
  Whitespace@6..7 " "
  Unique@7..13 "unique"
  Whitespace@13..14 " "
  Index@14..19 "index"
  Whitespace@19..20 " "
  On@20..22 "on"
  Whitespace@22..23 " "
  RangeVar@23..28
    Ident@23..28 "fkest"
  Ascii40@28..29 "("
  IndexElem@29..30
    Ident@29..30 "x"
  Ascii44@30..31 ","
  Whitespace@31..32 " "
  IndexElem@32..35
    Ident@32..35 "x10"
  Ascii44@35..36 ","
  Whitespace@36..37 " "
  IndexElem@37..41
    Ident@37..41 "x100"
  Ascii41@41..42 ")"
  Ascii59@42..43 ";"

