crates/pg_syntax/tests/snapshots/postgres_regress/join@525.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "insert into fkest select x/10, x%10, x from generate_series(1,1000) x;"
---
InsertStmt@0..70
  Insert@0..6 "insert"
  Whitespace@6..7 " "
  Into@7..11 "into"
  Whitespace@11..12 " "
  RangeVar@12..17
    Ident@12..17 "fkest"
  Whitespace@17..18 " "
  SelectStmt@18..69
    Select@18..24 "select"
    Whitespace@24..25 " "
    ResTarget@25..29
      AExpr@25..29
        ColumnRef@25..26
          Ident@25..26 "x"
        Ascii47@26..27 "/"
        AConst@27..29
          Iconst@27..29 "10"
    Ascii44@29..30 ","
    Whitespace@30..31 " "
    ResTarget@31..35
      AExpr@31..35
        ColumnRef@31..32
          Ident@31..32 "x"
        Ascii37@32..33 "%"
        AConst@33..35
          Iconst@33..35 "10"
    Ascii44@35..36 ","
    Whitespace@36..37 " "
    ResTarget@37..38
      ColumnRef@37..38
        Ident@37..38 "x"
    Whitespace@38..39 " "
    From@39..43 "from"
    Whitespace@43..44 " "
    RangeFunction@44..69
      List@44..66
        FuncCall@44..66
          Ident@44..59 "generate_series"
          Ascii40@59..60 "("
          AConst@60..61
            Iconst@60..61 "1"
          Ascii44@61..62 ","
          AConst@62..66
            Iconst@62..66 "1000"
      Ascii41@66..67 ")"
      Whitespace@67..68 " "
      Alias@68..69
        Ident@68..69 "x"
  Ascii59@69..70 ";"

