crates/pg_syntax/tests/snapshots/postgres_regress/join@526.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "insert into fkest1 select x/10, x%10 from generate_series(1,1000) x;"
---
InsertStmt@0..68
  Insert@0..6 "insert"
  Whitespace@6..7 " "
  Into@7..11 "into"
  Whitespace@11..12 " "
  RangeVar@12..18
    Ident@12..18 "fkest1"
  Whitespace@18..19 " "
  SelectStmt@19..67
    Select@19..25 "select"
    Whitespace@25..26 " "
    ResTarget@26..30
      AExpr@26..30
        ColumnRef@26..27
          Ident@26..27 "x"
        Ascii47@27..28 "/"
        AConst@28..30
          Iconst@28..30 "10"
    Ascii44@30..31 ","
    Whitespace@31..32 " "
    ResTarget@32..36
      AExpr@32..36
        ColumnRef@32..33
          Ident@32..33 "x"
        Ascii37@33..34 "%"
        AConst@34..36
          Iconst@34..36 "10"
    Whitespace@36..37 " "
    From@37..41 "from"
    Whitespace@41..42 " "
    RangeFunction@42..67
      List@42..64
        FuncCall@42..64
          Ident@42..57 "generate_series"
          Ascii40@57..58 "("
          AConst@58..59
            Iconst@58..59 "1"
          Ascii44@59..60 ","
          AConst@60..64
            Iconst@60..64 "1000"
      Ascii41@64..65 ")"
      Whitespace@65..66 " "
      Alias@66..67
        Ident@66..67 "x"
  Ascii59@67..68 ";"

