crates/pg_syntax/tests/snapshots/postgres_regress/join@534.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: create table j3 (id int);
---
CreateStmt@0..25
  Create@0..6 "create"
  Whitespace@6..7 " "
  Table@7..12 "table"
  Whitespace@12..13 " "
  RangeVar@13..15
    Ident@13..15 "j3"
  Whitespace@15..16 " "
  Ascii40@16..17 "("
  ColumnDef@17..23
    Ident@17..19 "id"
    Whitespace@19..20 " "
    TypeName@20..23
      IntP@20..23 "int"
  Ascii41@23..24 ")"
  Ascii59@24..25 ";"

